[package]
name = "spawn"
version = "0.1.0"
edition = "2024"

[features]
default = []
fd = []
elevate = []
cache = []

[dependencies]
seccomp = { path = "../seccomp", optional = true, features = ["notify"] }
user = { path = "../user", optional = true}
which = { path = "../which" }

caps = "0.5.6"
dashmap = { version = "6.1.0", default-features = false }
log = { version = "0.4.27", default-features = false }
nix = { version = "0.30.1", features = ["fs", "signal"], default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
signal-hook = { version = "0.3.18", features = ["iterator"], default-features = false }
thiserror = { version = "2.0.17", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace", "std"] }

[lints]
workspace = true
