[package]
name = "spawn"
version = "0.1.0"
edition = "2024"

[features]
default = []
fd = []
elevate = []
cache = []

[dependencies]
seccomp = { git = "https://github.com/kkernick/seccomp", optional = true, features = ["notify"] }
user = { git = "https://github.com/kkernick/user", optional = true}
which = { git = "https://github.com/kkernick/which" }

caps = "0.5.6"
dashmap = { version = "6.1.0", default-features = false }
log = { version = "0.4.27", default-features = false }
nix = { version = "0.31.2", features = ["fs", "signal"], default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
signal-hook = { version = "0.4.4", features = ["iterator"], default-features = false }
thiserror = { version = "2.0.17", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace", "std"] }

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
absolute_paths = "warn"
arithmetic_side_effects = "warn"
clone_on_ref_ptr = "warn"
missing_docs_in_private_items = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
str_to_string = "warn"
unreachable = "warn"
use_debug = "warn"
unused_results = "warn"
unwrap_used = "warn"
panic = "warn"
infinite_loop = "warn"
correctess = "warn"
nursery = "warn"
pedantic = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
implicit_hasher = {level = "allow", priority = 1}
needless_continue = {level = "allow", priority = 1}

[lints]
workspace = true
